--- a/pages/services.html
+++ b/pages/services.html
@@ -77,7 +77,7 @@
 
   <div class="top-blue">
     <!-- <div class="hex-pattern"></div> -->
-    <h1 class="md-center fade-in">Check out our available services</h1>
+    <h1 class="md-center fade-in">[Placeholder Text] Do we want a B-roll video instead</h1>
     <div class="icon-style-container icon-fade-in">
       <div class="icon-fade">
         <svg id="Layer_2" xmlns="http://www.w3.org/2000/svg" width="72.72" height="50.66" viewBox="0 0 72.72 50.66"><g id="Layer_1-2"><rect x=".45" y="10.99" width="53" height="39" rx="6.32" ry="6.32" fill="#526fa7" stroke="#526fa7" stroke-miterlimit="10" stroke-width=".89"/><path d="m12.6,7.23L16.61.58c.03-.05.09-.08.15-.08h23.59c.07,0,.14.05.16.12l2.35,6.65c.04.11-.04.23-.16.23H12.75c-.14,0-.22-.15-.15-.26Z" fill="#95bce4" stroke="#95bce4" stroke-miterlimit="10" stroke-width=".99"/><path d="m56.8,16.59l15.13-5.64c.15-.06.31.06.31.23v38.76c0,.16-.15.28-.3.23l-15.13-4.98c-.1-.03-.16-.12-.16-.23v-28.14c0-.1.06-.19.15-.23Z" fill="#95bce4" stroke="#95bce4" stroke-miterlimit="10" stroke-width=".96"/></g></svg>
