--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MM Studio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"  />
-  <link rel="stylesheet" href="./styles/new.css">
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body class="main">
   <!-- Mobile Nav -->
@@ -56,9 +56,9 @@
   <!-- End Mobile Nav -->
 
   <nav id="main_nav">
-    <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD.png"/></a></div>
+    <div class="logo"></div>
     <ul>
-      <li tabindex="0"><a href="pages/services.html">What We Do</a></li>
+      <li tabindex="0"><a href="pages/services.html">Services</a></li>
       <li class="drop-down" tabindex="0" ><a href="pages/portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
         <div class="nav-dropdown">
           <ul>
@@ -103,8 +103,8 @@
     </section>
   </main>
 
-  <footer class="blue">
-    <!-- <div class="footer-left">
+  <footer class="grey">
+    <div class="footer-left">
       <h3>Connect with our MM Team: </h3><span class="contact">@MMEmail</span>
     </div>
     <div class="footer-right">
@@ -115,7 +115,7 @@
         <li><a href="./pages/about.html">About</a></li>
         <li><a href="./pages/resources.html">Resources</a></li>
       </ul>
-    </div> -->
+    </div>
   </footer>
 
   <script src="../src/index.js"></script>
