--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <title>MM Studio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"  />
   <link rel="stylesheet" href="./styles/main.css">
-  <link rel="stylesheet" href="./styles/new.css">
+  
 </head>
 <body class="main">
   <!-- Mobile Nav -->
-  <div id="hamburger_nav" class="hidden">
+  <div id="hamburger_nav" class="hidden" aria-label="Mobile menu">
     <button class="nav-btn open-btn">
       <i class="fas fa-bars"></i>
     </button>
@@ -59,9 +59,9 @@
   <nav id="main_nav">
     <div class="logo"><a href="#"><img src="/assets/images/WCLD.png" alt="WCLD MM studio" /></a></div>
     <ul>
-      <li tabindex="0"><a href="pages/services.html">What We Do</a></li>
-      <li class="drop-down" tabindex="0" ><a href="pages/portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#1A3651" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
-        <div class="nav-dropdown">
+      <li><a href="pages/services.html">What We Do</a></li>
+      <li class="drop-down"><a href="pages/portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#1A3651" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+        <div class="nav-dropdown" tabindex="0">
           <ul>
             <li><a href="pages/portfolio.html#video">Video & Audio</a></li>
             <li><a href="pages/portfolio.html#design">Visual Design</a></li>
@@ -70,8 +70,8 @@
           </ul>
         </div>
       </li>
-      <li tabindex="0"><a href="pages/resources.html">Resources</a></li>
-      <li class="drop-down-two" tabindex="0"><a href="./pages/about.html">Contact</a></li>
+      <li><a href="pages/resources.html">Resources</a></li>
+      <li class="drop-down-two"><a href="./pages/about.html">Contact</a></li>
     </ul>
   </nav>
   <main>
