--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -56,10 +56,10 @@
   </div>
   <!-- End Mobile Nav -->
   <!-- Main Navigation -->
-  <nav class="explore-nav" id="main_nav">
-    <a href="../index.html"><div class="logo"></div></a>
+  <nav class="dark-blue-500 explore-nav" id="main_nav">
+    <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
     <ul>
-      <li tabindex="0"><a href="services.html">Services</a></li>
+      <li tabindex="0"><a href="services.html">What We Do</a></li>
       <li class="drop-down" tabindex="0" ><a href="#">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
         <div class="nav-dropdown">
           <ul>
