--- a/pages/resources.html
+++ b/pages/resources.html
@@ -5,8 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MM - Resources</title>
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
+  <!-- Main Navigation -->
+  <nav class="dark-blue-500" id="main_nav">
+    <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
+    <ul>
+      <li tabindex="0"><a href="./services.html">What We Do</a></li>
+      <li class="drop-down" tabindex="0" ><a href="./portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+        <div class="nav-dropdown">
+          <ul>
+            <li><a href="./portfolio.html#video">Video & Audio</a></li>
+            <li><a href="./portfolio.html#design">Visual Design</a></li>
+            <li><a href="./portfolio.html#interactive">Interactive</a></li>
+            <li><a href="./portfolio.html#immersive">Immersive</a></li>
+          </ul>
+        </div>
+      </li>
+      <li tabindex="0"><a href="#">Resources</a></li>
+      <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
+    </ul>
+  </nav>
   <h1>MM - Resources</h1>
   <h2>Documentation for videoshoots, self-recording best practices</h2>
 </body>
