--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
   </div>
   <!-- End Mobile Nav -->
   <!-- Logo -->
-  <a href="#" tabindex="0">
+  <a href="#" tabindex="0" class="wc-brand">
     <img class="wc-logo" src="/assets/images/PSU_Logo_blue.png" alt="Penn State World Campus Logo" /></a>
   <nav id="main_nav">
     <div class="logo">
-      <a href="#"><img src="/assets/images/PSU_Logo_blue.png" alt="WCLD MM Studio Logo" /></a>
       <a href="#"><img src="/assets/images/WCLD.png" alt="WCLD MM studio" /></a>
       </div>
       <ul>
