--- a/pages/services.html
+++ b/pages/services.html
@@ -95,17 +95,18 @@
     </div> -->
   </div>
   
+  <h2 class="center blue-underline">What We Do</h2>
 
   <section id="video-section" class="video-section">
     <div class="video-text">
-      <h2 class="center">Video & Audio </h2>
-      <div class="center"><p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p></div>
+      <h3>Video & Audio </h3>
+      <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
     </div>
 
     <div class="video-example">
       <img src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-1" >
     </div>
-    
+  </div>
   </section>
   
   <section class="design-section">
