--- a/pages/services.html
+++ b/pages/services.html
@@ -101,20 +101,23 @@
     <div class="video-text">
       <h3>Video & Audio </h3>
       <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
+      <button>View More</button>
     </div>
 
     <div class="video-image">
       <img src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library">
     </div>
+    
   </section>
   
   <section class="design-section">
     <div class="design-image">
-      <img src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-1" >
+      <img src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes">
     </div>
-    <div class="video-text">
-      <h3 class="center" id="design">Design</h3>
+    <div class="design-text">
+      <h3 id="design">Design</h3>
       <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
+      <button>View More</button>
     </div>
   </section>
   <section class="interactive-page">
