--- a/pages/services.html
+++ b/pages/services.html
@@ -101,7 +101,7 @@
     <div class="video-text">
       <h3>Video & Audio </h3>
       <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
-      <a href="./portfolio.html#video"><button>View More</button></a>
+      <a href="./portfolio.html#video"><button class="view-more">View More</button></a>
     </div>
 
     <div class="video-image">
@@ -116,7 +116,7 @@
     <div class="design-text">
       <h3 id="design">Design</h3>
       <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
-      <a href="./portfolio.html#design"><button>View More</button></a>
+      <a href="./portfolio.html#design"><button class="view-more">View More</button></a>
     </div>
   </section>
   <section class="interactive-page">
