--- a/pages/services.html
+++ b/pages/services.html
@@ -114,8 +114,8 @@
       <img class="box-shadow-left" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes">
     </div>
     <div class="design-text">
-      <h3 id="design">Design</h3>
-      <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
+      <h3 id="design">Design & Graphics</h3>
+      <p>Design boards, product manuals, illustrations, content graphics and animated gifs/banners. Applied across the course content graphics, it results in a visually cohesive look and an ascetically-pleasing user experience.  </p>
       <a href="./portfolio.html#design"><button class="view-more">View More</button></a>
     </div>
   </section>
