--- a/pages/services.html
+++ b/pages/services.html
@@ -97,15 +97,17 @@
   
   <h2 class="title center blue-underline">What We Do</h2>
 
-  <section id="video-section" class="video-section service-card">
-    <div class="video-text col">
-      <h3>Video & Audio </h3>
-      <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
-      <a href="./portfolio.html#video"><button class="view-more">View More</button></a>
-    </div>
+  <section id="video-section" class="video-section">
+    <div class="service-card">
+      <div class="video-text col">
+        <h3>Video & Audio </h3>
+        <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
+        <a href="./portfolio.html#video"><button class="view-more">View More</button></a>
+      </div>
 
-    <div class="video-image col">
-      <img class="box-shadow-right" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library">
+      <div class="video-image col">
+        <img class="box-shadow-right" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library">
+      </div>
     </div>
   </section>
   
