--- a/pages/journal.html
+++ b/pages/journal.html
@@ -71,28 +71,44 @@
     <h1>Latest Articles</h1>
 
     <div class="blog-articles-container">
+      
       <div class="blog-article-card">
-        <a href="#" class="blog-link"></a>
-        <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1683525272978/MB5H_kgOC.png?w=1600&h=840&fit=crop&crop=entropy&auto=format&auto=compress,format&format=webp" alt="" class="blog-article-image">
-        <h2>Using AI in Photoshop</h2>
-        <div class="blog-article-card-author">Veronica Terrill</div>
+        <a href="#" class="blog-link">
+          <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1683525272978/MB5H_kgOC.png?w=1600&h=840&fit=crop&crop=entropy&auto=format&auto=compress,format&format=webp" alt="" class="blog-article-image">
+        </a>
+        <div class="blog-article-content">
+          <a href="#" class="blog-link">
+            <h2>Using AI in Photoshop</h2>
+          </a>
+          <div class="blog-article-card-author">Veronica Terrill</div>
+        </div>
       </div>
 
 
       <div class="blog-article-card">
-        <a href="#" class="blog-link"></a>
-        <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1683525272978/MB5H_kgOC.png?w=1600&h=840&fit=crop&crop=entropy&auto=format&auto=compress,format&format=webp" alt="" class="blog-article-image">
-        <h2>Using AI in Photoshop</h2>
-        <div class="blog-article-card-author">Veronica Terrill</div>
+        <a href="#" class="blog-link">
+          <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1683525272978/MB5H_kgOC.png?w=1600&h=840&fit=crop&crop=entropy&auto=format&auto=compress,format&format=webp" alt="" class="blog-article-image">
+        </a>
+        <div class="blog-article-content">
+          <a href="#" class="blog-link">
+            <h2>Unlock Notion Automation: 5 Tips for Go developers who want to build Notion Integrations to automate their workspace</h2>
+          </a>
+          <div class="blog-article-card-author">Veronica Terrill</div>
+        </div>
       </div>
-
 
       <div class="blog-article-card">
-        <a href="#" class="blog-link"></a>
-        <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1683525272978/MB5H_kgOC.png?w=1600&h=840&fit=crop&crop=entropy&auto=format&auto=compress,format&format=webp" alt="" class="blog-article-image">
-        <h2>Using AI in Photoshop</h2>
-        <div class="blog-article-card-author">Veronica Terrill</div>
+        <a href="#" class="blog-link">
+          <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1683525272978/MB5H_kgOC.png?w=1600&h=840&fit=crop&crop=entropy&auto=format&auto=compress,format&format=webp" alt="" class="blog-article-image">
+        </a>
+        <div class="blog-article-content">
+          <a href="#" class="blog-link">
+            <h2>Using AI in Photoshop</h2>
+          </a>
+          <div class="blog-article-card-author">Veronica Terrill</div>
+        </div>
       </div>
+
     </div> 
   </section> 
 
